--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo": "~48.0.18",
     "expo-status-bar": "~1.4.4",
     "lucide-react-native": "^0.255.0",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-safe-area-context": "4.5.0",
